@@ -21,6 +21,11 @@
 - im_vips2tiff has a bigtiff option
 - oops, im_lineset() needs to ask for WIO of mask and ink
 - move cache invalidation to REGION, fixes a race
+- don't im_invalidate() after paint, it can cause horrible performance
+  problems ... for example, im_plotmask() used as the action operator for
+  im_fastlineuser() is terrible
+- instead, users of the inplace operations need to call im_invalidate() at the
+  end of a set of paint actions to trigger an update
 
 15/1/10 started 7.21.1
 - added "written" callbacks, used to implement write to non-vips formats
